--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "call-next-tick": "^1.1.2",
     "emojisource": "^1.0.0",
     "iscool": "^1.1.11",
+    "lodash": "^3.10.1",
+    "probable": "^1.7.0",
+    "seedrandom": "^2.4.2",
     "twit": "^1.1.20",
     "wander-google-ngrams": "^2.0.0"
   }
