--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "probable": "^1.7.0",
     "seedrandom": "^2.4.2",
     "twit": "^1.1.20",
-    "wander-google-ngrams": "^2.0.0"
+    "wander-google-ngrams": "^2.0.0",
+    "wordnok": "jimkang/wordnok#no-cache"
   }
 }
