--- a/package.json
+++ b/package.json
@@ -32,6 +32,6 @@
     "seedrandom": "^2.4.2",
     "twit": "^1.1.20",
     "wander-google-ngrams": "^2.0.0",
-    "wordnok": "jimkang/wordnok#no-cache"
+    "wordnok": "https://github.com/jimkang/wordnok.git#no-cache"
   }
 }
