--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "better-know-a-tweet": "^1.0.2",
     "call-next-tick": "^1.1.2",
     "emojisource": "^1.0.0",
+    "filtered-followback": "^1.2.0",
     "iscool": "^1.1.11",
     "lodash": "^3.10.1",
     "probable": "^1.7.0",
