--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "basicset-chronicler": "^1.3.1",
     "better-know-a-tweet": "^1.0.2",
     "call-next-tick": "^1.1.2",
-    "emojisource": "^1.0.0",
     "filtered-followback": "^1.2.0",
-    "iscool": "^1.1.11",
+    "iscool": "^1.1.16",
     "lodash": "^3.10.1",
+    "ngram-chain-to-sentence": "^1.0.0",
     "probable": "^1.7.0",
     "seedrandom": "^2.4.2",
     "twit": "^1.1.20",
-    "wander-google-ngrams": "^2.1.1",
+    "wander-google-ngrams": "^2.2.3",
     "wordnok": "https://github.com/jimkang/wordnok.git#no-cache"
   }
 }
