--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "better-know-a-tweet": "^1.0.2",
     "call-next-tick": "^1.1.2",
     "filtered-followback": "^1.2.0",
-    "iscool": "^1.1.16",
+    "iscool": "^1.1.17",
     "lodash": "^3.10.1",
     "ngram-chain-to-sentence": "^1.0.0",
     "probable": "^1.7.0",
     "seedrandom": "^2.4.2",
     "twit": "^1.1.20",
-    "wander-google-ngrams": "^2.2.4",
-    "wordnok": "https://github.com/jimkang/wordnok.git#no-cache"
+    "wander-google-ngrams": "^2.5.1",
+    "wordnok": "^3.1.0"
   }
 }
