--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jimkang/ngram-seance",
   "devDependencies": {
+    "eslint": "^3.9.1",
     "tape": "^3.0.3"
   },
   "dependencies": {
@@ -26,9 +27,11 @@
     "better-know-a-tweet": "^1.0.2",
     "call-next-tick": "^1.1.2",
     "filtered-followback": "^1.3.4",
+    "get-w2v-google-news-neighbors": "^1.0.0",
     "iscool": "^1.1.28",
     "lodash": "^3.10.1",
     "ngram-chain-to-sentence": "^1.0.0",
+    "nounfinder": "^2.0.3",
     "probable": "^1.7.0",
     "seedrandom": "^2.4.2",
     "twit": "^2.2.4",
